fix: 배포 간 오류 수정-1(font문제,metadata 수정)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "node -e \"try { require('child_process').execSync('npx lightningcss --version', { stdio: 'inherit' }) } catch (e) {}\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
