readme: PWA 구현 참고 이미지 추가

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "lang": "ko",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#f2f2f2",
   "theme_color": "#4F7942",
   "orientation": "portrait",
   "icons": [
